# fourier-drawing

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  compile  fourier.cc  fourier.h  geometrie.cc  geometrie.h  ideas.md  image.cc  image.h  main.cc  main2.cc  nombres_complexes.cc  nombres_complexes.h  prog  utils.cc  utils.h
libs/Fourier/: fourier.cpp
libs/Images/: image.cpp  image.h
libs/Utils/: utils.cpp  utils.h
src/: Main.cpp  app.cpp  app.h
